--- a/src/assets/scss/_tui-date-picker.scss
+++ b/src/assets/scss/_tui-date-picker.scss
@@ -288,6 +288,7 @@
     border: solid 1px #ddd;
      background-color: white;
      position: absolute;
+     overflow:hidden;
  }
  
  .tui-datepicker * {
