--- a/src/include/_filter.html
+++ b/src/include/_filter.html
@@ -2,7 +2,7 @@
     <div class="local_layer_inner">
         <table class="form_group_tb">
             <colgroup>
-                <col style="width:20%;" />
+                <col style="width:100px;" />
                 <col />
             </colgroup>
             <tbody>
@@ -17,7 +17,6 @@
                                 </div>
                                 <div id="form_date_start_render" class="ui_picker_render" data-parent="#filter_layer"></div>
                             </div>
-                            <div class="fgroup_cols else"></div>
                             <div class="fgroup_cols">
                                 <div class="tui-datepicker-input" value="2023-07-19 15:00">
                                     <input type="text" id="datepicker-endinput" class="input_tui_calendar">
@@ -34,7 +33,7 @@
                         <ul class="props_form_item_list gap_type2">
                             <li>
                                 <div class="props_form_item">
-                                    <input type="checkbox" class="props_form" id="type_check_01">
+                                    <input type="checkbox" class="props_form" id="type_check_01" checked>
                                     <label for="type_check_01" class="props_label">All</label>
                                 </div>
                             </li>
@@ -54,14 +53,14 @@
                     </td>
                 </tr>
                 <tr>
-                    <th><span class="form_group_label">카테고리</span></th>
+                    <th class="align_type2"><span class="form_group_label">카테고리</span></th>
                     <td>
-                        <input type="text" id="treeInput" placeholder="Select" autocomplete="off"/>
+                        <input type="text" id="treeInput" placeholder="카테고리 선택" class="input_tree" autocomplete="off" />
                     </td>
                 </tr>
             </tbody>
         </table>
-        <div class="scroll_subfooter_row">
+        <div class="field_footer_row">
             <a href="#" class="btn_field_formbox small cloudy">
                 <span class="btn_field_formbox_text">초기화</span>
             </a>
