--- a/src/include/_popup_map_data.html
+++ b/src/include/_popup_map_data.html
@@ -5,12 +5,12 @@
             <h2 class="popup_title">Use-case 매핑</h2>
             <a href="javascript:;" class="btn_popup_close"><span class="hdtext">팝업 닫기</span></a>
         </div>
-        <div class="popup_content_low">
+        <div class="popup_content_low" id="mapping_content_low">
             <!-- search -->
             <div class="search_field_container">
                 <div class="search_field_row">
                     <div class="search_field_cols">
-                        <a href="#" class="btn_field_box">
+                        <a href="#" class="btn_field_box" data-localpopup="#filter_local_layer" data-localParent = "#mapping_content_low">
                             <i class="ico_field ico_filter"></i>
                             <span class="field_box_text">필터</span>
                         </a>
@@ -19,7 +19,7 @@
                         <div class="combo_item medium" id="filter_layer_combo">
                             <a href="javascript:;" class="combo_target">전체</a>
                             <div class="combo_option_group medium">
-                                <div class="combo_option_scroll" data-rowCount="3">
+                                <div class="combo_option_scroll" data-rowCount="5">
                                     <ul class="combo_option_list">
                                         <li><a href="javascript:;" data-value="option_0" class="combo_option">옵션 01</a></li>
                                         <li><a href="javascript:;" data-value="option_1" class="combo_option">옵션 02</a></li>
@@ -74,7 +74,7 @@
             <!-- filter -->
             @@include('_filter_layer.html', { 
                 toggleText : "카테고리 선택"
-            }))
+            })
             <!-- // filter -->
             <!-- listdata_render_wrap -->
             <div class="listdata_render_wrap">
@@ -112,13 +112,13 @@
                                 <div class="combo_item" id="sort_layer_type01">
                                     <a href="javascript:;" class="combo_target">수정일자</a>
                                     <div class="combo_option_group">
-                                        <div class="combo_option_scroll" data-rowCount="3">
+                                        <div class="combo_option_scroll" data-rowCount="5">
                                             <ul class="combo_option_list">
-                                                <li><a href="javascript:;" data-value="option_0" class="combo_option">2023.00.00</a></li>
-                                                <li><a href="javascript:;" data-value="option_1" class="combo_option">2023.00.00</a></li>
-                                                <li><a href="javascript:;" data-value="option_2" class="combo_option">2023.00.00</a></li>
-                                                <li><a href="javascript:;" data-value="option_3" class="combo_option">2023.00.00</a></li>
-                                                <li><a href="javascript:;" data-value="option_4" class="combo_option">2023.00.00</a></li>
+                                                <li><a href="javascript:;" data-value="option_0" class="combo_option">ID</a></li>
+                                                <li><a href="javascript:;" data-value="option_1" class="combo_option">명칭</a></li>
+                                                <li><a href="javascript:;" data-value="option_2" class="combo_option">Type</a></li>
+                                                <li><a href="javascript:;" data-value="option_3" class="combo_option">수정 일자</a></li>
+                                                <li><a href="javascript:;" data-value="option_4" class="combo_option">생성자</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -128,7 +128,7 @@
                                 <div class="combo_item" id="sort_layer_type02">
                                     <a href="javascript:;" class="combo_target">내림차순</a>
                                     <div class="combo_option_group">
-                                        <div class="combo_option_scroll" data-rowCount="3">
+                                        <div class="combo_option_scroll" data-rowCount="5">
                                             <ul class="combo_option_list">
                                                 <li><a href="javascript:;" data-value="option_0" class="combo_option">올림차순</a></li>
                                                 <li><a href="javascript:;" data-value="option_1" class="combo_option">내림차순</a></li>
@@ -162,93 +162,112 @@
                 </div>
                 <div class="list_table_row">
                     <table class="list_table">
+                        <colgroup>
+                            <col style="width:16px;" />
+                            <col style="width:20%" />
+                            <col style="width:20%" />
+                            <col style="width:18%" />
+                            <col />
+                            <col style="width:20%" />
+                        </colgroup>
                         <thead>
                             <tr>
+                                <th scope="col" class="has_check"></th>
                                 <th scope="col"><span class="thtext">ID</span></th>
                                 <th scope="col"><span class="thtext">명칭</span></th>
                                 <th scope="col"><span class="thtext">Type</span></th>
-                                <th scope="col"><span class="thtext">Use-case ID</span></th>
-                                <th scope="col"><span class="thtext">Use-case 명칭</span></th>
                                 <th scope="col"><span class="thtext">수정 일자</span></th>
                                 <th scope="col"><span class="thtext">생성자</span></th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td><span class="tdtext">s_0000020</span></td>
+                                <td class="has_check"><input type="checkbox" class="props_form"></td>
+                                <td><span class="tdtext">uc_0000020</span></td>
                                 <td><span class="tdtext">testID1</span></td>
-                                <td><span class="tdtext">타입 A</span></td>
-                                <td>
-                                    <span class="tdtext">uc_0000020</span>
-                                    <div class="data_count_box_wrap">
-                                        <span class="data_count_box">+2</span>
-                                    </div>
-                                </td>
-                                <td>
-                                    <span class="tdtext">testS1</span>
-                                    <div class="data_count_box_wrap">
-                                        <span class="data_count_box">+2</span>
-                                    </div>
-                                </td>
+                                <td><span class="tdtext">이벤트 상황</span></td>
                                 <td><span class="tdtext">2023/06/28 10:00</span></td>
                                 <td><span class="tdtext">User</span></td>
                             </tr>
                             <tr>
-                                <td><span class="tdtext">s_0000019</span></td>
-                                <td><span class="tdtext">testID2</span></td>
-                                <td><span class="tdtext">타입 C</span></td>
-                                <td>
-                                    <span class="tdtext">uc_0000020</span>
-                                    <div class="data_count_box_wrap">
-                                        <span class="data_count_box">+5</span>
-                                    </div>
-                                </td>
-                                <td>
-                                    <span class="tdtext">testS1</span>
-                                    <div class="data_count_box_wrap">
-                                        <span class="data_count_box">+5</span>
-                                    </div>
-                                </td>
-                                <td><span class="tdtext">2023/06/28 10:00</span></td>
-                                <td><span class="tdtext">uu129</span></td>
-                            </tr>
-                            <tr>
-                                <td><span class="tdtext">s_0000020</span></td>
+                                <td class="has_check"><input type="checkbox" class="props_form"></td>
+                                <td><span class="tdtext">uc_0000020</span></td>
                                 <td><span class="tdtext">testID1</span></td>
-                                <td><span class="tdtext">타입 A</span></td>
-                                <td>
-                                    <span class="tdtext">uc_0000020</span>
-                                    <div class="data_count_box_wrap">
-                                        <span class="data_count_box">+2</span>
-                                    </div>
-                                </td>
-                                <td>
-                                    <span class="tdtext">testS1</span>
-                                    <div class="data_count_box_wrap">
-                                        <span class="data_count_box">+2</span>
-                                    </div>
-                                </td>
+                                <td><span class="tdtext">이벤트 상황</span></td>
                                 <td><span class="tdtext">2023/06/28 10:00</span></td>
                                 <td><span class="tdtext">User</span></td>
                             </tr>
                             <tr>
-                                <td><span class="tdtext">s_0000019</span></td>
-                                <td><span class="tdtext">testID2</span></td>
-                                <td><span class="tdtext">타입 C</span></td>
-                                <td>
-                                    <span class="tdtext">uc_0000020</span>
-                                    <div class="data_count_box_wrap">
-                                        <span class="data_count_box">+5</span>
-                                    </div>
-                                </td>
-                                <td>
-                                    <span class="tdtext">testS1</span>
-                                    <div class="data_count_box_wrap">
-                                        <span class="data_count_box">+5</span>
-                                    </div>
-                                </td>
+                                <td class="has_check"><input type="checkbox" class="props_form"></td>
+                                <td><span class="tdtext">uc_0000020</span></td>
+                                <td><span class="tdtext">testID1</span></td>
+                                <td><span class="tdtext">이벤트 상황</span></td>
                                 <td><span class="tdtext">2023/06/28 10:00</span></td>
-                                <td><span class="tdtext">uu129</span></td>
+                                <td><span class="tdtext">User</span></td>
+                            </tr>
+                            <tr>
+                                <td class="has_check"><input type="checkbox" class="props_form"></td>
+                                <td><span class="tdtext">uc_0000020</span></td>
+                                <td><span class="tdtext">testID1</span></td>
+                                <td><span class="tdtext">이벤트 상황</span></td>
+                                <td><span class="tdtext">2023/06/28 10:00</span></td>
+                                <td><span class="tdtext">User</span></td>
+                            </tr>
+                            <tr>
+                                <td class="has_check"><input type="checkbox" class="props_form"></td>
+                                <td><span class="tdtext">uc_0000020</span></td>
+                                <td><span class="tdtext">testID1</span></td>
+                                <td><span class="tdtext">이벤트 상황</span></td>
+                                <td><span class="tdtext">2023/06/28 10:00</span></td>
+                                <td><span class="tdtext">User</span></td>
+                            </tr>
+                            <tr>
+                                <td class="has_check"><input type="checkbox" class="props_form"></td>
+                                <td><span class="tdtext">uc_0000020</span></td>
+                                <td><span class="tdtext">testID1</span></td>
+                                <td><span class="tdtext">이벤트 상황</span></td>
+                                <td><span class="tdtext">2023/06/28 10:00</span></td>
+                                <td><span class="tdtext">User</span></td>
+                            </tr>
+                            <tr>
+                                <td class="has_check"><input type="checkbox" class="props_form"></td>
+                                <td><span class="tdtext">uc_0000020</span></td>
+                                <td><span class="tdtext">testID1</span></td>
+                                <td><span class="tdtext">이벤트 상황</span></td>
+                                <td><span class="tdtext">2023/06/28 10:00</span></td>
+                                <td><span class="tdtext">User</span></td>
+                            </tr>
+                            <tr>
+                                <td class="has_check"><input type="checkbox" class="props_form"></td>
+                                <td><span class="tdtext">uc_0000020</span></td>
+                                <td><span class="tdtext">testID1</span></td>
+                                <td><span class="tdtext">이벤트 상황</span></td>
+                                <td><span class="tdtext">2023/06/28 10:00</span></td>
+                                <td><span class="tdtext">User</span></td>
+                            </tr>
+                            <tr>
+                                <td class="has_check"><input type="checkbox" class="props_form"></td>
+                                <td><span class="tdtext">uc_0000020</span></td>
+                                <td><span class="tdtext">testID1</span></td>
+                                <td><span class="tdtext">이벤트 상황</span></td>
+                                <td><span class="tdtext">2023/06/28 10:00</span></td>
+                                <td><span class="tdtext">User</span></td>
+                            </tr>
+                            <tr>
+                                <td class="has_check"><input type="checkbox" class="props_form"></td>
+                                <td><span class="tdtext">uc_0000020</span></td>
+                                <td><span class="tdtext">testID1</span></td>
+                                <td><span class="tdtext">이벤트 상황</span></td>
+                                <td><span class="tdtext">2023/06/28 10:00</span></td>
+                                <td><span class="tdtext">User</span></td>
+                            </tr>
+                            <tr>
+                                <td class="has_check"><input type="checkbox" class="props_form"></td>
+                                <td><span class="tdtext">uc_0000020</span></td>
+                                <td><span class="tdtext">testID1</span></td>
+                                <td><span class="tdtext">이벤트 상황</span></td>
+                                <td><span class="tdtext">2023/06/28 10:00</span></td>
+                                <td><span class="tdtext">User</span></td>
                             </tr>
                         </tbody>
                     </table>
