--- a/src/include/_popup_map_nodata.html
+++ b/src/include/_popup_map_nodata.html
@@ -5,12 +5,12 @@
             <h2 class="popup_title">Use-case 매핑</h2>
             <a href="javascript:;" class="btn_popup_close"><span class="hdtext">팝업 닫기</span></a>
         </div>
-        <div class="popup_content_low">
+        <div class="popup_content_low" id="mapping_content_low_no">
             <!-- search -->
             <div class="search_field_container">
                 <div class="search_field_row">
                     <div class="search_field_cols">
-                        <a href="#" class="btn_field_box">
+                        <a href="#" class="btn_field_box" data-localpopup="#filter_local_layer_nodata" data-localParent = "#mapping_content_low_no">
                             <i class="ico_field ico_filter"></i>
                             <span class="field_box_text">필터</span>
                         </a>
@@ -19,7 +19,7 @@
                         <div class="combo_item medium" id="filter_layer_combo_no">
                             <a href="javascript:;" class="combo_target">전체</a>
                             <div class="combo_option_group medium">
-                                <div class="combo_option_scroll" data-rowCount="3">
+                                <div class="combo_option_scroll" data-rowCount="5">
                                     <ul class="combo_option_list">
                                         <li><a href="javascript:;" data-value="option_0" class="combo_option">옵션 01</a></li>
                                         <li><a href="javascript:;" data-value="option_1" class="combo_option">옵션 02</a></li>
@@ -62,19 +62,13 @@
                             <span class="btn_field_formbox_text">검색</span>
                         </a>
                     </div>
-                    <div class="search_field_cols">
-                        <a href="#" class="btn_field_formbox primary">
-                            <i class="ico_field_formbox ico_write"></i>
-                            <span class="btn_field_formbox_text">등록</span>
-                        </a>
-                    </div>
                 </div>
             </div>
             <!-- // search -->
             <!-- filter -->
             @@include('_filter_layer_nodata.html', { 
                 toggleText : "카테고리 선택"
-            }))
+            })
             <!-- // filter -->
             <!-- listdata_render_wrap -->
             <div class="listdata_render_wrap">
@@ -112,13 +106,13 @@
                                 <div class="combo_item" id="sort_layer_type01_no">
                                     <a href="javascript:;" class="combo_target">수정일자</a>
                                     <div class="combo_option_group">
-                                        <div class="combo_option_scroll" data-rowCount="3">
+                                        <div class="combo_option_scroll" data-rowCount="5">
                                             <ul class="combo_option_list">
-                                                <li><a href="javascript:;" data-value="option_0" class="combo_option">2023.00.00</a></li>
-                                                <li><a href="javascript:;" data-value="option_1" class="combo_option">2023.00.00</a></li>
-                                                <li><a href="javascript:;" data-value="option_2" class="combo_option">2023.00.00</a></li>
-                                                <li><a href="javascript:;" data-value="option_3" class="combo_option">2023.00.00</a></li>
-                                                <li><a href="javascript:;" data-value="option_4" class="combo_option">2023.00.00</a></li>
+                                                <li><a href="javascript:;" data-value="option_0" class="combo_option">ID</a></li>
+                                                <li><a href="javascript:;" data-value="option_1" class="combo_option">명칭</a></li>
+                                                <li><a href="javascript:;" data-value="option_2" class="combo_option">Type</a></li>
+                                                <li><a href="javascript:;" data-value="option_3" class="combo_option">수정 일자</a></li>
+                                                <li><a href="javascript:;" data-value="option_4" class="combo_option">생성자</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -128,7 +122,7 @@
                                 <div class="combo_item" id="sort_layer_type02_no">
                                     <a href="javascript:;" class="combo_target">내림차순</a>
                                     <div class="combo_option_group">
-                                        <div class="combo_option_scroll" data-rowCount="3">
+                                        <div class="combo_option_scroll" data-rowCount="5">
                                             <ul class="combo_option_list">
                                                 <li><a href="javascript:;" data-value="option_0" class="combo_option">올림차순</a></li>
                                                 <li><a href="javascript:;" data-value="option_1" class="combo_option">내림차순</a></li>
@@ -162,13 +156,20 @@
                 </div>
                 <div class="list_table_row">
                     <table class="list_table">
+                        <colgroup>
+                            <col style="width:16px;" />
+                            <col style="width:20%" />
+                            <col style="width:20%" />
+                            <col style="width:18%" />
+                            <col />
+                            <col style="width:20%" />
+                        </colgroup>
                         <thead>
                             <tr>
+                                <th scope="col" class="has_check"></th>
                                 <th scope="col"><span class="thtext">ID</span></th>
                                 <th scope="col"><span class="thtext">명칭</span></th>
                                 <th scope="col"><span class="thtext">Type</span></th>
-                                <th scope="col"><span class="thtext">Use-case ID</span></th>
-                                <th scope="col"><span class="thtext">Use-case 명칭</span></th>
                                 <th scope="col"><span class="thtext">수정 일자</span></th>
                                 <th scope="col"><span class="thtext">생성자</span></th>
                             </tr>
@@ -199,6 +200,7 @@
             console.log('callback');
         }
     });
+
 
 
     comboChangeCallback({
