--- a/src/assets/scss/_tui-date-picker.scss
+++ b/src/assets/scss/_tui-date-picker.scss
@@ -99,7 +99,7 @@
  
  .tui-calendar .tui-calendar-title-today:hover {
      color: #333;
-     background-color: #edf4fc;
+     background-color: #f7f5ff;
      cursor: pointer;
  }
  
