--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -10,7 +10,7 @@ html:not(.touchmode) {
     &.center_form_body{
         background:#f5f5f5 url("../images/background@2x.jpg") no-repeat 0 0/100% auto;
         .page_wrap{
-            min-height:100vh; position:relative;
+            min-height:100vh; position:relative; height:auto;
             // background:url("../images/login_object2@2x.png") no-repeat 100% 100%/244px auto;;
             display:flex;align-items: center;justify-content: center;
         }
@@ -329,7 +329,7 @@ html:not(.touchmode) {
 
 .btn_popup_close{display:block;width:40px;height:40px;background:url("../images/ic_popup_close@2x.png") no-repeat 0 0/100% auto;position:absolute;top:16px;right:16px;}
 
-.popup_content_low{flex:1;min-height:0;position:relative;overflow:hidden;overflow-y:overlay;padding:0 40px 60px;}
+.popup_content_low{flex:1;min-height:0;position:relative;overflow:hidden;overflow-y:overlay;padding:0 40px 40px;}
 
 .screen_content_both{display:flex;position:relative;
   &:after{display:block;content:'';width:1px;height:calc(100% + 24px);position:absolute;top:-24px;right:42%;background:#d9d9d9;}
