--- a/src/assets/scss/_contents.scss
+++ b/src/assets/scss/_contents.scss
@@ -152,6 +152,9 @@
 }
 .combo_option_group{
     display:none;text-align:left;position:relative;overflow:hidden;z-index:20;background: #FFFFFF;width:calc(100% - 2px);border: 1px solid #ccc;border-top:0;border-radius:0 0 4px 4px;box-sizing: border-box; position:absolute;top:calc(100% + 5px);left:0;
+    
+        
+
     &.active{display:block;
         box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
         &.reverse_pos{box-shadow: 0 -1px 2px 0 rgba(0, 0, 0, 0.2);}
@@ -165,6 +168,18 @@
     }
 }
 .combo_option_scroll{overflow:overlay;position:relative;
+    &::-webkit-scrollbar {
+
+        width: 12px;
+
+    }
+
+    &::-webkit-scrollbar-thumb {
+
+        background-color: hsla(0, 0%, 42%, 0.49);
+        border-radius: 100px;
+
+    }
     // &::-webkit-scrollbar-thumb {
     //     background: rgba(90, 90, 90,0);
     //   }
@@ -946,19 +961,22 @@ input.field_search_input{}
 .subc_form_item_content_row{padding-top:14px;}
 .subc_form_content_row{}
 .subc_form_tb{
-    width:100%;
+    width:100%; table-layout: fixed;
     tr{
         &:last-of-type{
             th,td{}
         }
     }
-    th{width:1px;padding-right:8px;}
+    th{padding-right:8px;
+       
+    }
     th,td{text-align: left;vertical-align: middle;font-size:0;line-height:0;padding:0 10px 8px 0;}
     tr:last-of-type{
         th,td{padding-bottom:0}
     }
     td{
-        .combo_item{width:100%;}
+        
+        .combo_item{width:100%; box-sizing: border-box;}
         &.has_control{
             width:30px;
         }
